added untested feature of caching and removed turned telegrambotmodule into a directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "source/persistentstatemodule"]
 	path = source/persistentstatemodule
 	url = git@github.com:JhonnyJason/service-sources-persistentstatemodule.git
+[submodule "source/telegrambotmodule"]
+	path = source/telegrambotmodule
+	url = git@github.com:JhonnyJason/service-sources-telegrambotmodule.git
