--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "source/specificinterfaces/secretmanagementinterface"]
 	path = source/specificinterfaces/secretmanagementinterface
 	url = git@github.com:JhonnyJason/secretmanagementinterface.git
+[submodule "source/validatabletimestampmodule"]
+	path = source/validatabletimestampmodule
+	url = git@github.com:JhonnyJason/thingy-sources-validatabletimestampmodule.git
